--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --primary: #2d6d92;
+  --secondary: #e61f51;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background: rgb(221, 219, 216);
+  color: rgb(31, 29, 29);
   font-family: Arial, Helvetica, sans-serif;
 }
