--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .primary-btn {
+    @apply bg-secondary text-white font-semibold py-3 px-6 rounded-xl shadow-[0px_10px_14px_-7px_#de0029] hover:!scale-110 duration-300;
+  }
+}
+
 :root {
   --primary: #2d6d92;
   --secondary: #e61f51;
